--- a/lego-app/package.json
+++ b/lego-app/package.json
@@ -6,8 +6,9 @@
     "firebase": "^4.1.3",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router": "^3.0.5"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
