--- a/lego-app/package.json
+++ b/lego-app/package.json
@@ -11,7 +11,7 @@
     "react-router": "^3.0.5"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "react-scripts": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
