--- a/lego-app/package.json
+++ b/lego-app/package.json
@@ -8,7 +8,8 @@
     "react": "^15.6.1",
     "react-codemirror": "^1.0.0",
     "react-dom": "^15.6.1",
-    "react-router": "^3.0.5"
+    "react-router": "^3.0.5",
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
