--- a/lego-app/package.json
+++ b/lego-app/package.json
@@ -8,6 +8,7 @@
     "react": "^15.6.1",
     "react-codemirror": "^1.0.0",
     "react-dom": "^15.6.1",
+    "react-highlight": "^0.10.0",
     "react-router": "^3.0.5",
     "webpack": "^3.5.5"
   },
